attempt to stop gallery img elements form shrinking on mobile ios

--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -19,8 +19,7 @@
 }
 .gallery-img {
     flex: none;
-    flex-shrink: 0;
-    object-fit: contain;
+    align-self: center;
 }
 .gallery-img-landscape {
     width: 100%;
